Random update to site description of self

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="d-flex align-items-center order-12" style="height:200px;">
                 <div class="container pt-4">
                     <h1 class="text-center" style="color:rgb(59,59,59);font-size:56px;font-weight:bold;font-family:Roboto, sans-serif;">HI, I'M ALLAN JEREMY<br></h1>
-                    <h3 class="text-center" style="color:rgb(59,59,59);padding-top:0.25em;padding-bottom:0.25em;font-weight:300;font-size:24px;line-height:30px;letter-spacing:1.5px;font-family:Roboto, sans-serif;">I am a full stack developer based in Nairobi, Kenya.<br>This website is under development. Please check back soon.<br></h3>
+                    <h3 class="text-center" style="color:rgb(59,59,59);padding-top:0.25em;padding-bottom:0.25em;font-weight:300;font-size:24px;line-height:30px;letter-spacing:1.5px;font-family:Roboto, sans-serif;">I occasionally create cool stuff<br></h3>
                     <div class="row mt-4">
                         <div class="col text-center"><a class="text-dark" href="https://github.com/AllanJeremy" target="_blank" style="font-size:36px;"><i class="fa fa-github-alt"></i></a>
                             <p><a class="text-dark" href="https://github.com/AllanJeremy" target="_blank">Github</a></p>
